--- a/styles/main.css
+++ b/styles/main.css
@@ -273,8 +273,9 @@ body {
   }
 
   .hero__answer-button {
-    width: 280px;
+    width: 308px;
     height: 58px;
+    text-align: center;
   }
 
   .support-link {
@@ -290,11 +291,13 @@ body {
   }
 
   .cards--desktop {
-    display: block !important;
+    display: flex !important;
+    justify-content: center;
   }
 
   .review--desktop {
-    display: block !important;
+    display: flex !important;
+    justify-content: center;
   }
 
   .review:not(:last-child) {
@@ -317,8 +320,9 @@ body {
   }
 
   .hero__answer-button {
-    width: 280px;
-    height: 58px;
+    width: 100%;
+    height: 100%;
+    padding: 12px 32px;
   }
 
   .support-link {
