--- a/styles/help.css
+++ b/styles/help.css
@@ -38,8 +38,16 @@ a {
   margin-bottom: 32px;
 }
 
+.mb-16 {
+  margin-bottom: 16px;
+}
+
 .mb-12 {
   margin-bottom: 12px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
 }
 
 .fw-w {
